--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -1,4 +1,4 @@
 @import 'includes/windows-control-buttons.css';
 @import 'includes/cascade-nav-bar.css';
 @import 'includes/custom-css.css';
-/* @import 'includes/test.css'; */
+@import 'includes/test.css';
