idk what im doing

--- a/chrome/includes/consts.css
+++ b/chrome/includes/consts.css
@@ -7,5 +7,5 @@
     --panel-hide-offset: -60px !important;
     --opacity-when-hidden: 0.05 !important;
     --uc-navbar-transform: -40px !important;
-    --space-margin: 3%;
+    --space-margin: 30px;
 }
