added margin to topbar

--- a/chrome/includes/consts.css
+++ b/chrome/includes/consts.css
@@ -8,4 +8,5 @@
     --opacity-when-hidden: 0.05 !important;
     --uc-navbar-transform: -40px !important;
     --space-margin: 30px;
+    --light-grey: rgb(25, 25, 25) !important;
 }
