refactor some code

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -2,3 +2,4 @@
 @import 'includes/cascade-nav-bar.css';
 @import 'includes/custom-css.css';
 @import 'includes/test.css';
+/* @import 'includes/autohidetoolbar.css'; */
