--- a/chrome/includes/custom-css.css
+++ b/chrome/includes/custom-css.css
@@ -16,22 +16,24 @@
     scrollbar-width: 10px !important;
 }
 
-#back-button,
+/* #back-button,
 #forward-button,
-#reload-button,
+#reload-button, */
 #home-button,
 #alltabs-button,
 #urlbar-go-button,
 #pageActionButton,
-#private-browsing-indicator-with-label {
+#private-browsing-indicator-with-label,
+#star-button-box,
+.tab-background {
     display: none !important;
 }
 
 /* Tab Border Color */
 
 .tabbrowser-tab[selected="true"] {
-    background: var(--toolbar-bgcolor) !important;
-    background-color: var(--grey-color) !important;
+    background: var(--grey-color) !important;
+    /* background-color: var(--grey-color) !important; */
     /* border: 2px solid var(--pink-color) !important; */
     /* border-radius: 10px !important; */
     /* border-top-left-radius: 5px !important;
@@ -42,10 +44,10 @@
     /* max-width: 35px !important; min-width: 35px !important; */
     /* border-bottom-left-radius: 0px !important;
     border-bottom-right-radius: 0px !important; */
-
     border-bottom: 2px solid var(--pink-color) !important;
 }
-.tabbrowser-tab:not([selected]){
+
+.tabbrowser-tab:not([selected]) {
     background: var(--toolbar-bgcolor) !important;
     background-color: var(--grey-color) !important;
     /* border: 2px solid var(--pink-color) !important; */
@@ -64,12 +66,13 @@
     border-radius: 0px !important; */
 }
 
-.tabbrowser-tab[selected="true"] .tab-content {
+.tabbrowser-tab[selected="true"] .tab-content{
     color: white !important;
-    background-color: var(--grey-color) !important;
-    /* border: 0px !important;
-    border-radius: 0px !important; */
+    background: var(--grey-color) !important;
+    /* border: none !important; */
+    /* border-radius: 0px !important; */
 }
+
 
 .bookmark-item:hover {
     border: 0.2px solid var(--pink-color) !important;
@@ -125,7 +128,6 @@
 
 #TabsToolbar {
     background: var(--grey-color) !important;
-    /* visibility: collapse; */
 }
 
 .tabbrowser-tab[fadein]:not([pinned]) {
@@ -138,25 +140,25 @@
 
 
 /* https://stackoverflow.com/questions/2717480/css-selector-for-first-element-with-class */
-#tabbrowser-arrowscrollbox > .tabbrowser-tab{
-    margin-left: var(--space-margin) !important;  
+#tabbrowser-arrowscrollbox>.tabbrowser-tab {
+    margin-left: var(--space-margin) !important;
 }
 
-#tabbrowser-arrowscrollbox > :last-child{
-    margin-right: var(--space-margin) !important;  
+#tabbrowser-arrowscrollbox> :last-child {
+    margin-right: var(--space-margin) !important;
 }
 
-#tabbrowser-arrowscrollbox > .tabbrowser-tab ~ .tabbrowser-tab{
+#tabbrowser-arrowscrollbox>.tabbrowser-tab~.tabbrowser-tab {
     margin: 0% !important;
 }
 
 
 
 
-.toolbar-items{
+.toolbar-items {
     margin-top: 15px !important;
 }
 
-.tabbrowser-tab:not([selected]) .tab-content:hover{
+.tabbrowser-tab:not([selected]) .tab-content:hover {
     background-color: var(--light-grey) !important;
 }
