--- a/chrome/includes/test.css
+++ b/chrome/includes/test.css
@@ -1,1 +1,32 @@
 @import './consts.css';
+
+/* :root {
+    --toolbar-height: 40px;
+} */
+
+/* [uidensity="compact"]:root {
+    --toolbar-height: 30px;
+}
+
+[uidensity="touch"]:root {
+    --toolbar-height: 44px;
+} */
+
+#TabsToolbar {
+    /* -moz-box-ordinal-group: 2 !important; */
+    /* height: var(--toolbar-height); */
+    /* position: relative !important; */
+}
+
+/* #TabsToolbar {
+    margin: calc(-1 * 0px) 0 2px 838px !important;
+} */
+
+#nav-bar {
+    position: relative !important;
+    height: 35px !important;
+}
+
+/* #urlbar-container {
+    max-width: 400px !important;
+} */
