edit some variables and autohidetoolbox

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -2,4 +2,5 @@
 @import 'includes/cascade-nav-bar.css';
 @import 'includes/custom-css.css';
 @import 'includes/test.css';
+@import 'includes/autohidetoolbox.css';
 /* @import 'includes/autohidetoolbar.css'; */
