--- a/chrome/includes/custom-css.css
+++ b/chrome/includes/custom-css.css
@@ -47,6 +47,10 @@
     border-bottom: 2px solid var(--pink-color) !important;
 }
 
+#navigator-toolbox {
+    border-bottom: none !important;
+}
+
 .tabbrowser-tab:not([selected]) {
     background: var(--toolbar-bgcolor) !important;
     background-color: var(--grey-color) !important;
@@ -66,7 +70,7 @@
     border-radius: 0px !important; */
 }
 
-.tabbrowser-tab[selected="true"] .tab-content{
+.tabbrowser-tab[selected="true"] .tab-content {
     color: white !important;
     background: var(--grey-color) !important;
     /* border: none !important; */
@@ -161,4 +165,10 @@
 
 .tabbrowser-tab:not([selected]) .tab-content:hover {
     background-color: var(--light-grey) !important;
+}
+
+
+#nav-bar {
+    position: relative !important;
+    height: 35px !important;
 }
