--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -1,6 +1,24 @@
-@import 'includes/windows-control-buttons.css';
-@import 'includes/cascade-nav-bar.css';
-@import 'includes/custom-css.css';
-@import 'includes/test.css';
-@import 'includes/autohidetoolbox.css';
-/* @import 'includes/autohidetoolbar.css'; */
+/* Always Default Enabled */
+@import url(includes/consts.css);
+@import url(includes/bookmark_stuff.css);
+@import url(includes/remove_elements.css);
+@import url(includes/windows-control-buttons.css);
+@import url(includes/cascade-nav-bar.css);
+@import url(includes/custom-css.css);
+
+
+/* For Icons */
+/* @import url(includes/icon_only_default.css);
+@import url(includes/icon_only_show_content_hover.css);
+@import url(includes/icon_only_show_content_selected.css); */
+
+
+/* Misc */
+/* @import url(includes/url_w_shortcut.css); */
+/* @import url(includes/autohidetoolbox.css); */
+/* @import url(includes/autohidetoolbar.css); */
+/* @import url(includes/one_liner.css); */
+
+
+/* Testing */
+@import url(includes/test.css);
