--- a/chrome/includes/custom-css.css
+++ b/chrome/includes/custom-css.css
@@ -16,19 +16,6 @@
     scrollbar-width: 10px !important;
 }
 
-/* #back-button,
-#forward-button,
-#reload-button, */
-#home-button,
-#alltabs-button,
-#urlbar-go-button,
-#pageActionButton,
-#private-browsing-indicator-with-label,
-#star-button-box,
-.tab-background {
-    display: none !important;
-}
-
 /* Tab Border Color */
 
 .tabbrowser-tab[selected="true"] {
@@ -54,45 +41,17 @@
 .tabbrowser-tab:not([selected]) {
     background: var(--toolbar-bgcolor) !important;
     background-color: var(--grey-color) !important;
-    /* border: 2px solid var(--pink-color) !important; */
-    /* border-top: none !important;
-    border-left: none !important;
-    border-right: none !important; */
-    /* border-bottom: 2px solid var(--pink-color) !important; */
     border-bottom: 0px solid !important;
 }
-
 
 .tabbrowser-tab:not([selected]) .tab-content {
     color: var(--pink-color) !important;
     background-color: var(--grey-color) !important;
-    /* border: 0px !important;
-    border-radius: 0px !important; */
 }
 
 .tabbrowser-tab[selected="true"] .tab-content {
     color: white !important;
     background: var(--grey-color) !important;
-    /* border: none !important; */
-    /* border-radius: 0px !important; */
-}
-
-
-.bookmark-item:hover {
-    border: 0.2px solid var(--pink-color) !important;
-    border-radius: 50px !important;
-    background: transparent !important;
-    background: transparent !important;
-    background-color: var(--toolbar-bgcolor) !important;
-}
-
-.bookmark-item {
-    border: 1px solid transparent !important;
-}
-
-.menupopup {
-    --panel-background: var(--grey-color) !important;
-    --panel-color: white !important;
 }
 
 #PlacesToolbar menupopup[placespopup="true"] {
@@ -129,26 +88,35 @@
     margin-inline-end: initial !important;
 }
 
-
 #TabsToolbar {
     background: var(--grey-color) !important;
 }
 
-.tabbrowser-tab[fadein]:not([pinned]) {
+
+/* Stretch TabBar To Full Length */
+/* .tabbrowser-tab[fadein]:not([pinned])[selected="true"] {
     max-width: none !important;
     overflow: hidden
+} */
+
+/* Remove "X" From Tabs Until Hovered */
+/* https://www.reddit.com/r/FirefoxCSS/comments/12t8jmv/hide_tab_close_button_x_when_hovered/ */
+.tabbrowser-tab:not([pinned]):not(:hover) .tab-close-button {
+    visibility: collapse !important;
 }
 
-
-
+.tabbrowser-tab:not([pinned]):hover .tab-close-button {
+    visibility: visible !important;
+    display: block !important;
+}
 
 
 /* https://stackoverflow.com/questions/2717480/css-selector-for-first-element-with-class */
-#tabbrowser-arrowscrollbox>.tabbrowser-tab {
+#tabbrowser-arrowscrollbox>.tabbrowser-tab, #scrollbutton-up {
     margin-left: var(--space-margin) !important;
 }
 
-#tabbrowser-arrowscrollbox> :last-child {
+#tabbrowser-arrowscrollbox> :last-child, #scrollbutton-down {
     margin-right: var(--space-margin) !important;
 }
 
@@ -156,19 +124,17 @@
     margin: 0% !important;
 }
 
-
-
-
-.toolbar-items {
-    margin-top: 15px !important;
-}
-
 .tabbrowser-tab:not([selected]) .tab-content:hover {
     background-color: var(--light-grey) !important;
 }
 
 
-#nav-bar {
+/* #nav-bar {
     position: relative !important;
     height: 35px !important;
+} */
+
+/* Remove Speaker Button in Tabs */
+.tab-icon-image {
+    opacity: 1 !important;
 }
