--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -8,9 +8,9 @@
 
 
 /* For Icons */
-/* @import url(includes/icon_only_default.css);
+@import url(includes/icon_only_default.css);
 @import url(includes/icon_only_show_content_hover.css);
-@import url(includes/icon_only_show_content_selected.css); */
+/* @import url(includes/icon_only_show_content_selected.css); */
 
 
 /* Misc */
