--- a/chrome/includes/icon_only_default.css
+++ b/chrome/includes/icon_only_default.css
@@ -1,7 +1,6 @@
 /* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/icon_only_tabs.css made available under Mozilla Public License v. 2.0
 See the above repository for updates as well as full license text. */
 
-/* ShowIconOnly */
 .tab-content> :not(.tab-icon-stack) {
     display: none
 }
@@ -14,11 +13,10 @@ See the above repository for updates as well as full license text. */
     margin-inline: 0 !important;
 }
 
-.tabbrowser-tab:not([selected]) {
+.tabbrowser-tab {
     -moz-box-flex: 0 !important; /* Fx <112 compatibility */
     flex-grow: 0 !important;
 }
-
 
 .tabbrowser-tab[fadein] {
     min-width: calc(16px + 2 * 10px + 4px) !important;
