--- a/chrome/includes/icon_only_show_content_hover.css
+++ b/chrome/includes/icon_only_show_content_hover.css
@@ -1,13 +1,30 @@
 /* ShowContentsOnNOTSelectedWhenHover */
-.tabbrowser-tab:not([selected]):hover .tab-content> :not(.tab-icon-stack){
+.tabbrowser-tab:not([selected]):hover .tab-content> :not(.tab-icon-stack) {
     display: flex !important;
     margin-left: 5px !important;
 }
 
-.tabbrowser-tab:not([selected]):hover , .tab-content{
-    -moz-box-flex: 1 !important; /* Fx <112 compatibility */
+.tabbrowser-tab:not([selected]):hover,
+.tab-content {
+    -moz-box-flex: 1 !important;
+    /* Fx <112 compatibility */
     flex-grow: 100 !important;
 }
-.tabbrowser-tab:not([selected]):hover, .tab-icon-stack>* {
+
+.tabbrowser-tab:not([selected]):hover,
+.tab-icon-stack>* {
     margin-inline: 1 !important;
+}
+
+.tabbrowser-tab[selected="true"]:hover .tab-content> :not(.tab-icon-stack) {
+    display: flex !important;
+    margin-left: 5px !important;
+}
+
+
+.tabbrowser-tab[selected="true"]:hover,
+.tab-content {
+    -moz-box-flex: 1 !important;
+    /* Fx <112 compatibility */
+    flex-grow: 100 !important;
 }
