--- a/chrome/includes/remove_elements.css
+++ b/chrome/includes/remove_elements.css
@@ -1,6 +1,6 @@
+/* #forward-button,
 #back-button,
-#forward-button,
-#reload-button,
+#reload-button, */
 #home-button,
 #alltabs-button,
 #urlbar-go-button,
