--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -8,13 +8,13 @@
 
 
 /* For Icons */
-@import url(includes/icon_only_default.css);
-@import url(includes/icon_only_show_content_hover.css);
+/* @import url(includes/icon_only_default.css); */
+/* @import url(includes/icon_only_show_content_hover.css); */
 /* @import url(includes/icon_only_show_content_selected.css); */
 
 
 /* Misc */
-/* @import url(includes/url_w_shortcut.css); */
+@import url(includes/url_w_shortcut.css);
 /* @import url(includes/autohidetoolbox.css); */
 /* @import url(includes/autohidetoolbar.css); */
 /* @import url(includes/one_liner.css); */
