--- a/chrome/includes/one_liner.css
+++ b/chrome/includes/one_liner.css
@@ -1,30 +1,221 @@
-@import url(consts.css);
+/*
+*  Hi~
+*
+*  The theme Another Oneline uses code from
+*  👉 https://github.com/JarnotMaciej/Essence 👈 Thank you~~ 🤗
+*/
 
-#TabsToolbar {
-    margin-left: var(--navbarWidth) !important;
+/* Menu button */
+#PanelUI-button {
+    -moz-box-ordinal-group: 0 !important;
+    order: -2 !important;
+    margin: 2px !important;
+    /* display: none !important; /* uncomment this line to hide the menu button */
+}
+
+/* Page back and foward buttons */
+#back-button,
+#forward-button {
+    /* display: none !important */
+    padding: 0 !important;
+}
+
+/* Space before and after tabs */
+.titlebar-spacer {
+    /* display: none; */
+    width: 20px !important;
+}
+
+/* --- ~END~ element visibility section --- */
+
+/* Navbar size calc */
+:root {
+    --tab-border-radius: 6px !important;
+    /*  Tab border radius -- Changes the tabs rounding  */
+    /*  Default: 6px  */
+    --NavbarWidth: 43;
+    /*  Default values: 36 - 43  */
+    --TabsHeight: 36;
+    /*  Minimum: 30  */
+    /*  Default: 36  */
+    --TabsBorder: 8;
+    /*  Doesnt do anything on small layout  */
+    /*  Default: 8  */
+    --NavbarHeightSmall: calc(var(--TabsHeight) + var(--TabsBorder))
+        /*  Only on small layout  */
+        /*  Default: calc(var(--TabsHeight) + var(--TabsBorder))  */
+        /*  Default as a number: 44  */
+}
+
+@media screen and (min-width:1325px)
+/*  Only the tabs space will grow from here  */
+    {
+    :root #nav-bar {
+        margin-top: calc(var(--TabsHeight) * -1.1px - var(--TabsBorder) * 1.1px) !important;
+        height: calc(var(--TabsHeight) * 1.1px + var(--TabsBorder) * 1.1px)
+    }
+
+    #TabsToolbar {
+        margin-left: calc(1325px / 100 * var(--NavbarWidth)) !important
+    }
+
+    #nav-bar {
+        margin-right: calc(100vw - calc(1325px / 100 * var(--NavbarWidth))) !important;
+        vertical-align: center !important
+    }
+
+    #urlbar-container {
+        min-width: 0px !important;
+        flex: auto !important
+    }
+
+    toolbarspring {
+        display: none !important
+    }
+}
+
+@media screen and (min-width:950px) and (max-width:1324px)
+/*  Both the tabs space and the navbar will grow  */
+    {
+    :root #nav-bar {
+        margin-top: calc(var(--TabsHeight) * -1.1px - var(--TabsBorder) * 1.1px) !important;
+        height: calc(var(--TabsHeight) * 1.1px + var(--TabsBorder) * 1.1px)
+    }
+
+    #TabsToolbar {
+        margin-left: calc(var(--NavbarWidth) * 1vw) !important
+    }
+
+    #nav-bar {
+        margin-right: calc(100vw - calc(var(--NavbarWidth) * 1vw)) !important;
+        vertical-align: center !important
+    }
+
+    #urlbar-container {
+        min-width: 0px !important;
+        flex: auto !important
+    }
+
+    toolbarspring {
+        display: none !important
+    }
+
+    #TabsToolbar,
+    #nav-bar {
+        transition: margin-top .25s !important
+    }
+}
+
+@media screen and (max-width:949px)
+/*  The window is not enough wide for a one line layout  */
+    {
+    :root #nav-bar {
+        padding: 0 5px 0 5px !important;
+        height: calc(var(--NavbarHeightSmall) * 1px) !important
+    }
+
+    toolbarspring {
+        display: none !important;
+    }
+
+    #TabsToolbar,
+    #nav-bar {
+        transition: margin-top .25s !important
+    }
+}
+
+#nav-bar,
+#PersonalToolbar {
+    /* background-color: #0000 !important; */
+    background-color: var(--grey-color) !important;
+    background-image: none !important;
+    box-shadow: none !important
 }
 
 #nav-bar {
-    margin-right: calc(100vw - var(--navbarWidth)) !important;
-    height: var(--default-height) !important;
+    margin-left: 3px;
 }
 
-#urlbar-container {
-    min-width: 0px !important;
+.tab-background,
+.tab-stack {
+    min-height: calc(var(--TabsHeight) * 1px) !important
 }
 
-/* :root[uidensity="compact"] #nav-bar {
-    margin-top: -37px !important;
-    height: 37px !important;
-} */
-
-:root:not([uidensity="compact"]):not([uidensity="touch"]) #nav-bar {
-    /* margin-top: -44px !important;
-    height: 44px !important; */
-    margin-top: calc(-1 *var(--default-height)) !important /* Default Firefox Value */
+/*  Removes urlbar border/background  */
+#urlbar-background {
+    border: none !important;
+    outline: none !important;
+    transition: .15s !important;
 }
 
-/* :root[uidensity="touch"] #nav-bar {
-    margin-top: -49px !important;
-    height: 49px !important;
-} */
+/*  Removes the background from the urlbar while not in use  */
+#urlbar:not(:hover):not([breakout][breakout-extend])>#urlbar-background {
+    box-shadow: none !important;
+    /* background: #0000 !important; */
+    background: var(--grey-color) !important;
+}
+
+/*  Removes annoying border  */
+#navigator-toolbox {
+    border: none !important
+}
+
+/* Fades window while not in focus */
+#navigator-toolbox-background:-moz-window-inactive {
+    filter: contrast(90%)
+}
+
+/* Remove fullscreen warning border */
+#fullscreen-warning {
+    border: none !important;
+    background: -moz-Dialog !important;
+}
+
+/*  Tabs close button  */
+.tabbrowser-tab:not(:hover) .tab-close-button {
+    opacity: 0% !important;
+    transition: 0.3s !important;
+    display: -moz-box !important;
+}
+
+.tab-close-button[selected]:not(:hover) {
+    opacity: 45% !important;
+    transition: 0.3s !important;
+    display: -moz-box !important;
+}
+
+.tabbrowser-tab:hover .tab-close-button {
+    opacity: 50%;
+    transition: 0.3s !important;
+    background: none !important;
+    cursor: pointer;
+    display: -moz-box !important;
+}
+
+.tab-close-button:hover {
+    opacity: 100% !important;
+    transition: 0.3s !important;
+    background: none !important;
+    cursor: pointer;
+    display: -moz-box !important;
+}
+
+.tab-close-button[selected]:hover {
+    opacity: 100% !important;
+    transition: 0.3s !important;
+    background: none !important;
+    cursor: pointer;
+    display: -moz-box !important;
+}
+
+#PersonalToolbar {
+    background: var(--grey-color) !important;
+}
+
+#nav-bar {
+    margin-left: 0 !important;
+}
+
+#PanelUI-menu-button {
+    padding: 0 !important;
+}
