--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -1,3 +1,10 @@
+/* @-moz-document url("about:newtab"), url("about:home") {
+    .outer-wrapper.ds-outer-wrapper-breakpoint-override.only-search.visible-logo {
+        background-image: url("./Background.png"), url("./NewtabBackground.png");
+        background-position: 0 -44px, 0 0 !important;
+    }
+} */
+
 /* div.showPrivate.showSearch.container */
 @-moz-document url("about:home"),
 url("about:blank"),
