--- a/chrome/includes/remove_elements.css
+++ b/chrome/includes/remove_elements.css
@@ -9,7 +9,7 @@
 #star-button-box,
 /* .tab-background, */
 .tab-icon-overlay,
-#unified-extensions-button,
+/* #unified-extensions-button, */
 /* URL bar icons */
 #identity-permission-box,
 /* #star-button-box, */
